--- a/package.json
+++ b/package.json
@@ -23,24 +23,31 @@
     "test-postgres": "node scripts/test-postgres.js",
     "test": "jest"
   },
-  "keywords": ["fintech", "voice-ai", "infobip", "openai", "demo", "conference"],
+  "keywords": [
+    "fintech",
+    "voice-ai",
+    "infobip",
+    "openai",
+    "demo",
+    "conference"
+  ],
   "author": "DevRel Team",
   "license": "MIT",
   "dependencies": {
     "axios": "^1.12.2",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
-    "sqlite3": "^5.1.7",
-    "pg": "^8.11.3",
-    "cors": "^2.8.5",
-    "body-parser": "^1.20.2",
     "express-validator": "^7.0.1",
-    "ws": "^8.18.0",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^2.7.0",
+    "pg": "^8.11.3",
+    "sqlite3": "^5.1.7",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
+    "concurrently": "^8.2.2",
     "jest": "^30.1.3",
-    "nodemon": "^3.1.10",
-    "concurrently": "^8.2.2"
+    "nodemon": "^3.1.10"
   }
 }
